atg-dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Amber_Tier__c</fullName>
        <label>Amber Tier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amber__c</fullName>
        <label>Amber #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualINVSales__c</fullName>
        <description>Total number of sales done by customer last 1 year ir-respective of amber &amp; non amber</description>
        <label>AnnualINVSales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualTransaction__c</fullName>
        <description>Total number of invoices made by customer last 1 year ir-respective of amber &amp; non amber</description>
        <label>AnnualTransaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Customer_Value__c</fullName>
        <description>Average Customer value</description>
        <label>Average Customer Value (ACV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Transaction_Value__c</fullName>
        <description>Average Transaction Value</description>
        <label>Average Transaction Value (ATV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Golden_ID__c</fullName>
        <description>Unique Identifier of customers</description>
        <label>Customer Golden ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail L2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FTransaction__c</fullName>
        <description>First transaction made by customer</description>
        <label>FTransaction</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Total Number of Transaction / Tenure</description>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HouseHold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that the account belong to.</description>
        <label>HouseHold</label>
        <referenceTo>HouseHold__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LTransaction__c</fullName>
        <description>Last transaction made by customer</description>
        <label>LTransaction</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_Of_Brands__c</fullName>
        <label>Number Of Brands</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point_Balance__c</fullName>
        <label>Point Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Segment_Amber__c</fullName>
        <label>Strategic Segment Amber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <description>Number of Year since when customer has relationship with al tayer group</description>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalINVSales__c</fullName>
        <label>TotalINVSales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTransactions__c</fullName>
        <description>Total number of invoces done by customer irrespective of amber &amp; non amber</description>
        <label>TotalTransactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Account_points__c</fullName>
        <label>Total Account points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>Organization Record Type</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>